[package]
name = "kodec"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Simple crate defining common interface for encoders and decoders."
license = "Apache-2.0"
repository = "https://github.com/zduny/kodec"
documentation = "https://docs.rs/kodec/"
keywords = ["codec", "encoding", "decoding", "json", "binary"]

[features]
default = []
binary = ["bincode"]
json = ["serde_json"]

[dependencies]
serde = "1.0.147"
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.87", optional = true }
